--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,8 @@ dev = [
     "pyink>=24.3.0",
     "ipython",
     "jupyter",
+    "pytest>=8.2.2",
+    "pytype",
 ]
 # Requirements for building documentation.
 docs = [
@@ -75,6 +77,11 @@ line-length = 80
 unstable = true
 pyink-indentation = 2
 pyink-use-majority-quotes = true
+
+[tool.pyright]
+include = [ "penzai" ]
+venvPath = ""
+venv = ".venv"
 
 [build-system]
 requires = ["flit_core >=3.8,<4"]
