Enable pyink on tests, fix VSCode pyink config, fix lint.
Turns on checking pyink formatting for test files.

Also disables a bad Python version for pyink:
Black and Pyink do not support python 3.12.5, but uvx automatically
selects this version occasionally, which breaks autoformatting in
VSCode.

Also fixes remaining lint issues.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,6 @@
         "editor.detectIndentation": false,
         "editor.defaultFormatter": "ms-python.black-formatter",
     },
-    "black-formatter.path": ["uvx", "pyink"],
+    "black-formatter.path": ["uvx", "--python=>=3.9,!=3.12.5", "pyink"],
     "pylint.enabled": true,
 }
