--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -42,7 +42,7 @@ jobs:
 
     # Check formatting
     - name: Check pyink formatting
-      run: uv run pyink treescope --check
+      run: uv run pyink treescope tests --check
 
     - name: Run pylint
       run: uv run pylint treescope
