Fix documentation build: pin packaging==24.1, install with uv.
Documentation builds on readthedocs have been failing due to
a conflict with the `packaging=24.2` package. We can avoid it by
pinning the package. We also ensure reproducible builds by using
uv to install packages from the lockfile.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ docs = [
     "myst-nb>=1.0.0",
     "myst-parser>=3.0.1",
     "matplotlib>=3.5.0",
+    "packaging==24.1",
     "palettable==3.3.3",
     "pandas==2.2.2",
     "plotly==5.22.0",
