--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,8 @@ test = [
     "jax>=0.4.23",
     "pytest>=8.2.2",
     "torch>=2.0.0",
+    "pydantic>=2.0.0",
+    "omegaconf>=2.0.0",
 ]
 # Extra dependencies for some notebook demos.
 notebook = [
@@ -66,7 +68,7 @@ docs = [
     "palettable==3.3.3",
     "pandas==2.2.2",
     "plotly==5.22.0",
-    "penzai~=0.2.0",
+    "penzai~=0.2.4",
     "sphinx_contributors",
     "sphinx-hoverxref",
     "torch==2.3.1",
